[package]
name = "SysYCompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
koopa = "0.0.5"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
lazy_static = "1.4.0"
